// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`image 1`] = `
{
  "body": "{"prompt":"A cute baby sea otter","num_images":3}",
  "headers": {
    "authorization": "Key <key>",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "https://queue.fal.run/fal-ai/flux/dev",
}
`;

exports[`image 2`] = `
{
  "body": "{"prompt":"A cute baby sea otter","model":"dall-e-2","n":3}",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "https://api.openai.com/v1/image/generations",
}
`;

exports[`dump 1`] = `
{
  "image": {
    "model": "fal-ai/flux/dev",
    "params": {
      "n": 3,
      "prompt": "A cute baby sea otter",
    },
  },
  "options": {
    "apiKey": "<key>",
  },
  "provider": "fal",
}
`;

exports[`dump 2`] = `
{
  "image": {
    "model": "dall-e-2",
    "params": {
      "n": 3,
      "prompt": "A cute baby sea otter",
    },
  },
  "options": {
    "apiKey": "<key>",
  },
  "provider": "openai",
}
`;
